# papa

./: .ghci  .gitignore  README.md  cabal.project  changelog  default.nix  papa.cabal  shell.nix
ci/: ci.nix  jobsets.json  jobsets.nix
papa/: LICENSE  README.md  changelog  default.nix  papa.cabal
papa-base/: README.md  default.nix  papa-base.cabal
papa-base-export/: README.md  default.nix  papa-base-export.cabal
papa-base-export/src/Papa/Base/: Export.hs
papa-base-export/src/Papa/Base/Export/: Prelude.hs
papa-base-export/src/Papa/Base/Export/Control/: Applicative.hs  Category.hs  Monad.hs
papa-base-export/src/Papa/Base/Export/Data/: Bool.hs  Char.hs  Either.hs  Eq.hs  Foldable.hs  Function.hs  Functor.hs  Int.hs  List.hs  Maybe.hs  Monoid.hs  Ord.hs  Ratio.hs  Semigroup.hs  String.hs  Traversable.hs  Void.hs
papa-base-export/src/Papa/Base/Export/Data/List/: NonEmpty.hs
papa-base-implement/: README.md  default.nix  papa-base-implement.cabal
papa-base-implement/src/Papa/Base/: Implement.hs
papa-base-implement/src/Papa/Base/Implement/Control/: Applicative.hs  Monad.hs
papa-base-implement/src/Papa/Base/Implement/Data/: Bool.hs  Foldable.hs  Function.hs  Functor.hs  List.hs  Monoid.hs  Traversable.hs
papa-base/src/Papa/: Base.hs
papa-bifunctors/: changelog.md  default.nix  papa-bifunctors.cabal
papa-bifunctors-export/: README.md  changelog  default.nix  papa-bifunctors-export.cabal
papa-bifunctors-export/src/Papa/Bifunctors/: Export.hs
papa-bifunctors-implement/: README.md  changelog.md  default.nix  papa-bifunctors-implement.cabal
papa-bifunctors-implement/src/Papa/Bifunctors/: Implement.hs
papa-bifunctors-implement/src/Papa/Bifunctors/Implement/Data/: Bifoldable.hs
papa-bifunctors/src/Papa/: Bifunctors.hs
papa-example/: README.md  changelog.md  default.nix  papa-example.cabal
papa-example/src/Papa/: Example.hs
papa-export/: README.md  changelog  default.nix  papa-export.cabal
papa-export/src/Papa/: Export.hs
papa-implement/: README.md  changelog  default.nix  papa-implement.cabal
papa-implement/src/Papa/: Implement.hs
papa-implement/src/Papa/Implement/Data/: Bool.hs
papa-include/: README.md  default.nix  papa-include.cabal
papa-include/src/Papa/: Include.hs
papa-include/src/Papa/Include/Data/: List.hs  Semigroupoid.hs
papa-include/src/Papa/Include/Data/Functor/: Apply.hs  Bind.hs
papa-lens/: README.md  changelog  changelog.md  default.nix  papa-lens.cabal
papa-lens-export/: README.md  default.nix  papa-lens-export.cabal
papa-lens-export/src/Papa/Lens/: Export.hs
papa-lens-implement/: README.md  changelog  changelog.md  default.nix  papa-lens-implement.cabal
papa-lens-implement/src/Papa/Lens/: Implement.hs
papa-lens-implement/src/Papa/Lens/Implement/Data/: Collapse.hs  List.hs  Tuple.hs
papa-lens/src/Papa/: Lens.hs
papa-semigroupoids/: README.md  default.nix  papa-semigroupoids.cabal
papa-semigroupoids-export/: README.md  default.nix  papa-semigroupoids-export.cabal
papa-semigroupoids-export/src/Papa/Semigroupoids/: Export.hs
papa-semigroupoids-implement/: README.md  changelog  default.nix  papa-semigroupoids-implement.cabal
papa-semigroupoids-implement/src/Papa/Semigroupoids/: Implement.hs
papa-semigroupoids-implement/src/Papa/Semigroupoids/Implement/Data/Functor/: Bind.hs
papa-semigroupoids-implement/src/Papa/Semigroupoids/Implement/Data/Semigroup/: Foldable.hs
papa-semigroupoids/src/Papa/: Semigroupoids.hs
papa-x/: README.md  changelog.md  default.nix  papa-x.cabal
papa-x-export/: README.md  default.nix  papa-x-export.cabal
papa-x-export/src/Papa/X/: Export.hs
papa-x-implement/: README.md  changelog.md  default.nix  papa-x-implement.cabal
papa-x-implement/src/Papa/X/: Implement.hs
papa-x/src/Papa/: X.hs
papa/src/: Papa.hs
src/: Papa.hs
