name:               papa-base-export
version:            0.3.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Prelude with only useful functions
category:           Prelude
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Prelude with only useful functions
homepage:           https://github.com/qfpl/papa
bug-reports:        https://github.com/qfpl/papa/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:qfpl/papa.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                  , semigroups >= 0.18 && < 0.19
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Papa.Base.Export
                    Papa.Base.Export.Control.Applicative
                    Papa.Base.Export.Control.Category
                    Papa.Base.Export.Control.Monad
                    Papa.Base.Export.Data.Bool
                    Papa.Base.Export.Data.Char
                    Papa.Base.Export.Data.Either
                    Papa.Base.Export.Data.Eq
                    Papa.Base.Export.Data.Foldable
                    Papa.Base.Export.Data.Function
                    Papa.Base.Export.Data.Functor
                    Papa.Base.Export.Data.Int
                    Papa.Base.Export.Data.List
                    Papa.Base.Export.Data.List.NonEmpty
                    Papa.Base.Export.Data.Maybe
                    Papa.Base.Export.Data.Monoid
                    Papa.Base.Export.Data.Ord
                    Papa.Base.Export.Data.Ratio
                    Papa.Base.Export.Data.Semigroup
                    Papa.Base.Export.Data.String
                    Papa.Base.Export.Data.Traversable
                    Papa.Base.Export.Data.Void
                    Papa.Base.Export.Prelude
