name:               papa-base-implement
version:            0.3.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Useful base functions reimplemented
category:           Prelude
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Useful base functions reimplemented
homepage:           https://github.com/qfpl/papa
bug-reports:        https://github.com/qfpl/papa/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:qfpl/papa.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                  , semigroups >= 0.18
                  , papa-base-export >= 0.3.1 && < 1
                  
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Papa.Base.Implement
                    Papa.Base.Implement.Control.Applicative
                    Papa.Base.Implement.Control.Monad
                    Papa.Base.Implement.Data.Foldable
                    Papa.Base.Implement.Data.Function
                    Papa.Base.Implement.Data.Functor
                    Papa.Base.Implement.Data.List
                    Papa.Base.Implement.Data.Monoid
                    Papa.Base.Implement.Data.Traversable
