name:               papa-bifunctors
version:            0.3.0
license:            BSD3
license-file:       LICENSE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2016-2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Prelude with only useful functions
category:           Prelude
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Prelude with only useful functions
homepage:           https://github.com/qfpl/papa
bug-reports:        https://github.com/qfpl/papa/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:qfpl/papa.git

flag                small_base
  description:      Choose the new, split-up bifunctors package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , papa-bifunctors-export >= 0.3.0 && < 1
                    , papa-bifunctors-implement >= 0.3.0 && < 1
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Papa.Bifunctors
                    
test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
