name:               papa-x-export
version:            0.3.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           export useful functions.
category:           Prelude
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  export useful functions.
homepage:           https://github.com/qfpl/papa
bug-reports:        https://github.com/qfpl/papa/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:qfpl/papa.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Papa.X.Export
