name:               papa
version:            0.3.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2016, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Reasonable default import
category:           Prelude
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Reasonable default import
homepage:           https://github.com/qfpl/papa
bug-reports:        https://github.com/qfpl/papa/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:qfpl/papa.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , papa-base >= 0.3.1 && < 1
                    , papa-base-export >= 0.3.1 && < 1
                    , papa-base-implement >= 0.3.1 && < 1
                    , papa-bifunctors >= 0.3.1 && < 1
                    , papa-bifunctors-export >= 0.3.1 && < 1
                    , papa-bifunctors-implement >= 0.3.1 && < 1
                    , papa-lens >= 0.3.1 && < 1
                    , papa-lens-export >= 0.3.1 && < 1
                    , papa-lens-implement >= 0.3.1 && < 1
                    , papa-semigroupoids >= 0.3.1 && < 1
                    , papa-semigroupoids-export >= 0.3.1 && < 1
                    , papa-semigroupoids-implement >= 0.3.1 && < 1
                    , papa-x >= 0.3.1 && < 1
                    , papa-x-export >= 0.3.1 && < 1
                    , papa-x-implement >= 0.3.1 && < 1
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Papa
